@@ -1,0 +1,5 @@
+all:
+	./do
+
+clean:
+	rm -rf assets
