@@ -1,31 +1,19 @@
-# Automatically added by dh_systemd_start
+# Automatically added by dh_systemd_start/12.10ubuntu1
 if [ -d /run/systemd/system ]; then
 	systemctl --system daemon-reload >/dev/null || true
 fi
 # End automatically added section
-# Automatically added by dh_installinit
-if [ "$1" = "purge" ] ; then
-	update-rc.d coredns remove >/dev/null
-fi
-
-
-# In case this system is running systemd, we make systemd reload the unit files
-# to pick up changes.
-if [ -d /run/systemd/system ] ; then
-	systemctl --system daemon-reload >/dev/null || true
-fi
-# End automatically added section
-# Automatically added by dh_systemd_enable
+# Automatically added by dh_systemd_enable/12.10ubuntu1
 if [ "$1" = "remove" ]; then
 	if [ -x "/usr/bin/deb-systemd-helper" ]; then
-		deb-systemd-helper mask coredns.service >/dev/null
+		deb-systemd-helper mask 'coredns.service' >/dev/null || true
 	fi
 fi
 
 if [ "$1" = "purge" ]; then
 	if [ -x "/usr/bin/deb-systemd-helper" ]; then
-		deb-systemd-helper purge coredns.service >/dev/null
-		deb-systemd-helper unmask coredns.service >/dev/null
+		deb-systemd-helper purge 'coredns.service' >/dev/null || true
+		deb-systemd-helper unmask 'coredns.service' >/dev/null || true
 	fi
 fi
 # End automatically added section
