@@ -1,10 +1,5 @@
-# Automatically added by dh_systemd_start
+# Automatically added by dh_systemd_start/12.10ubuntu1
 if [ -d /run/systemd/system ] && [ "$1" = remove ]; then
-	deb-systemd-invoke stop coredns.service >/dev/null
-fi
-# End automatically added section
-# Automatically added by dh_installinit
-if [ -x "/etc/init.d/coredns" ] && [ "$1" = remove ]; then
-	invoke-rc.d coredns stop || exit $?
+	deb-systemd-invoke stop 'coredns.service' >/dev/null || true
 fi
 # End automatically added section
