@@ -2,5 +2,6 @@ coredns (0.0+git0cb5298bd39f895f1ef7ae5d70ebd3301d54af61) UNRELEASED; urgency=me
 
   * Package for Debian.
   * Release latest for debian/ubuntu
+  * Release latest for debian/ubuntu
 
- -- Miek Gieben <miek@miek.nl>  Mon, 04 Jan 2021 20:21:22 +0100
+ -- Miek Gieben <miek@miek.nl>  Mon, 04 Jan 2021 20:28:11 +0100
